Mon Jan 19 21:59:06 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/assemblies/CUTS.Web/CUTS.Web.mpc:
        * utils/BMW/assemblies/CUTS.Web/CUTS/Web/UI/Archive/TestBrowser.cs:
        * utils/BMW/assemblies/CUTS.Web/CUTS/Web/UI/Archive/TestProfile.cs:

          . Implemented the browser control for displaying a test profile.

        * utils/BMW/website/BMW.master:
        * utils/BMW/website/BMW.master.cs:

          . Fixed the footer so that it displays completely across the
            bottom of the web page.

Mon Jan 19 17:43:31 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/archiving/server/TestArchiveBrowser_i.cpp:
        * cuts/utils/archiving/server/TestArchive_i.cpp:
        * cuts/utils/archiving/server/Test_Archive_Server.cpp:

          . Bug fix where the test browser was not detecting the end
            of the test profiles in the database.

        * cuts/utils/db/ODBC/ODBC_Record.h:
        * cuts/utils/db/ODBC/ODBC_Record.cpp:

          . Bug fix where the record iterator did not advance to the
            first record in the result.

        * utils/BMW/assemblies/CUTS.Archive/CUTS.Archive.mpc:
        * utils/BMW/assemblies/CUTS.Archive/CUTS.Archive.snk:

          . Added support to signing the assembly with a strong name key.

        * utils/BMW/assemblies/CUTS.Data/CUTS.Data.mpc:
        * utils/BMW/assemblies/CUTS.Data/CUTS/Data/UUID.cs:

          . Added support for converting a CUTS::UUID to a string.

        * utils/BMW/assemblies/CUTS.Web/CUTS.Web.mpc:
        * utils/BMW/assemblies/CUTS.Web/CUTS/Web/UI/Archive:
        * utils/BMW/assemblies/CUTS.Web/CUTS/Web/UI/Archive/TestBrowser.cs:

          . Simple control that allows you to view the test profiles in
            the database. The next step is to flush out this control and
            allow downloading of test data.

        * utils/BMW/website/BMW.master:
        * utils/BMW/website/Web.config: